<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="nome_prima_scheda" tools:keep="@string/nome_prima_scheda">Scheda Iniziale</string>
    <string name="nessuna_nota_inserita">Nessuna descrizione inserita</string>
    <string name="app_name">Scheda Palestra</string>
    <string name="title_activity_dettaglio_storico" tools:keep="@string/title_activity_dettaglio_storico">DettaglioStoricoActivity</string>
    <string name="title_activity_activityestione_super_set" tools:keep="@string/title_activity_activityestione_super_set">ActivityestioneSuperSet</string>
    <string name="title_activity_gestione_super_set" tools:keep="@string/title_activity_gestione_super_set">GestioneSuperSetActivity</string>
    <string name="title_activity_gestione_nomi_esercizi_personali" tools:keep="@string/title_activity_gestione_nomi_esercizi_personali">GestioneNomiEserciziPersonali</string>
    <string name="title_activity_gestione_esercizi_personali" tools:keep="@string/title_activity_gestione_esercizi_personali">GestioneEserciziPersonaliActivity</string>
    <string name="TitoloActivityMain" tools:keep="@string/TitoloActivityMain" />
    <string name="TitoloActivityStorico">Elenco schede</string>
    <string name="testoGuidaTitoloGenerale">Funzionalità della pagina</string>
    <string name="testoGuidaIntroduttivaInserimentoModificaCancellazione">Dalla pagina è possibile eseguire le seguenti azioni:\n
        - Creazione di nuova scheda\n
        - Inserimento | Modifica | Cancellazione esercizi della scheda corrente\n
        - Filtrare esercizi\n
        - Visualizzare l\'elenco delle schede inserite\n
        - Entrare nella sezione per la gestione delle Super Set\n
        - Entrare nella sezione di ampliamento dell\' archivio esercizi per inserirne di propri.\n
        - Esportare la scheda attiva in formato pdf e ottenere l\'elenco delle schede esportate. Bisogna fornire un nome al file creato. Il sistema antepone al nome fornito la dicitura
        Sp_Gr_ oppure Sp_El_ oppure Sp_Ro oppure Sp_Gi\n
        Il sistema al primo avvio crea una scheda vuota per iniziare subito
        ad inserire i propri esercizi.\nE\' possibile modificare l\'ordine degli esercizi mediante trascinamento usando il tasto posto alla sinistra di ognuno.\nE\' stato
        inserito un semplice e pratico cronometro per il recupero tra una serie e l\' altra. Per visualizzarlo premere il relativo tasto in alto
    </string>
    <string name="testoGuidaAttenzioneSpostamentoEsercizio">La modifica dell\'ordine di un esercizio che fa parte di una Super Set implica la cancellazione della stessa
        (del solo raggruppamento)
    </string>
    <string name="testoGuidaTitoloCreazioneNuovaScheda">Creazione nuova scheda</string>
    <string name="testoGuidaCreazioneNuovaScheda">Per creare una nuova scheda utilizzare il menu contrassegnato dai 3 punti verticali posto in alto a destra e selezionare
        la relativa voce. Il sistema apre una schermata in cui è possibile inserire una nota che contraddistingue la scheda e che può essere successivamente utilizzato
        dall\'utente per ricercare una scheda precedente
    </string>
    <string name="testoAttenzioneSchedaNonPiuModificabile">Quando viene creata una nuova scheda, le schede precedenti restano nel sistema e possono essere successivamente riutilizzate
    </string>
    <string name="testoGuidaTitoloInserimentoEsercizio">Inserimento di un nuovo esercizio</string>
    <string name="testoGuidaInserimentoEsercizio">Per inserire un nuovo esercizio avvalersi del bottone con il simbolo \"+\" posto in basso a destra. Il sistema presenta
        la possibilità di inserire un esercizio aerobico (cardio) oppure anaerobico con serie a ripetizioni costanti o variabili (piramidale).\n
        A seconda della scelta effettuata viene presentato un popup in cui è possibile inserire i dati.
        Nel caso di inserimento di un esercizio con serie composte da ripetizioni costanti i campi obbligatori sono:\n\n
        - Il nome del gruppo muscolare\n\n
        - Il nome dell\'esercizio\n\n
        - Il numero di serie\n\n
        - Il numero di ripetizioni\n\n
        Tutti gli altri campi sono facoltativi e potranno essere aggiunti o modificati successivamente.\n\n
        Nel caso di un esercizio con serie piramidali i campi obbligatori sono\n
        - Il nome del gruppo muscolare\n\n
        - Il nome dell\'esercizio\n\n
        - Il numero di ripetizioni per ogni serie\n\n
        Non è necessario inserire il numero di serie in quanto il sistema lo determina in automatico.\n\n
        Nel caso di un esercizio aerobico\n\n
        - Il nome dell\'esercizio\n\n
        Tutti gli altri campi sono facoltativi e potranno essere aggiunti o modificati successivamente.\n\n
        Ogni esercizio viene inserito in coda ma può essere spostato successivamente mediante trascinamento\n
    </string>
    <string name="testoGuidaTitoloModificaEsercizio">Modifica di un esercizio</string>
    <string name="testoGuidaModificaEsercizio">Per apportare delle modifiche agli elementi di un esercizio
        (peso, ripetizioni, note ecc.) fare un click sul relativo
        elemento. Il sistema apre una schermata nella quale è possibile apportare tali modifiche.
        I campi relativi al nome del gruppo muscolare\n
        e al nome dell\'esercizio non possono essere modificati.
        Se anche tali elementi sono stati inseriti in maniera errata bisogna procedere all\'eliminazione della voce e al suo reinserimento\n
    </string>
    <string name="testoGuidaTitoloCancellazioneEsercizio">Eliminazione di un esercizio</string>
    <string name="testoGuidaCancellazioneEsercizio">Per eliminare un esercizio dalla scheda fare un \"click prolungato\" sulla relativa voce dell\'elenco</string>
    <string name="testoGuidaAttenzioneCancellazioneEsercizio">L\'eliminazione di un esercizio che fa parte di una Super Set implica la cancellazione della stessa
        (del solo raggruppamento)</string>
    <string name="testoGuidaTitoloFiltroEsercizi">Filtro esercizi</string>
    <string name="testoGuidaFiltroEsercizi">Per visualizzare gli esercizi inseriti di un determinato gruppo muscolare oppure associati ad un determinato giorno della
        settimana oppure di n gruppi muscolari oppure raggruppati in una determinata routine utilizzare il menu contrassegnato dai 3 punti verticali posto in alto a destra e selezionare una delle relative voci.
        Il sistema visualizza un sottomenu oppure un popup in cui l\'utente può scegliere quali esercizi visualizzare. Nel caso di filtro basato su giorno settimanale oppure routine,
        il sistema visualizza ANCHE gli esercizi per i quali è stato impostato "indifferente" come attributo
    </string>
    <string name="testoGuidaTitoloStoricoSchede">Elenco schede</string>
    <string name="testoGuidaStoricoSchedeInMain">E\' possibile richiamare le schede precedentemente inserite. Per fare ciò utilizzare
        il menu contrassegnato dai 3 punti verticali posto in alto a destra e selezionare la relativa voce. Il sistema passa alla schermata in cui vengono elencate tutte
        le schede inserite.
    </string>
    <string name="testoAttenzioneAggiornamentoListEsercizi">L\'inserimento di un nuovo esercizio non implica l\'immediato aggiornamento della lista degli esercizi
        sullo sfondo. Per visualizzare la situazione aggiornata, utilizzare il tasto \"Chiudi\" della schermata e non il tasto \"Back\" dello smartphone.
        Se è stato utilizzato il tasto \"Back\", per visualizzare la situazione aggiornata, utilizzare la funzione di filtro come descritto successivamente
    </string>
    <string name="testoAttenzioneMemorizzazioneLocale">Il sistema memorizza tutti i dati all\'interno del terminale dell\'utente. Nel caso di disinstallazione
        dell\'applicazione oppure di eliminazione dei suoi dati, non sarà possibile ripristinarli
    </string>
    <string name="testoGuidaGestioneSuperSet">Dalla pagine è possibile eseguire le seguenti azioni:\n
        - Raggruppare 2 o più esercizi in Super Set\n
        - Eliminare il raggruppamento
    </string>
    <string name="testoGuidaTitoloCreazioneSuperSet">Creazione Super Set</string>
    <string name="testoGuidaCreazioneSuperSet">Per raggruppare 2 o più esercizi in Super Set selezionarli mediante spunta posta alla sinistra di ognuno di essi e
        successivamente premere il bottone \"SALVA SUPER SET\" posto in basso a sinistra. Ripetere i passi per ogni Super Set che si desidera creare. Al termine premere
        il bottone \"BACK\" posto in alto a sinistra oppure selezionare la voce di menù \"Torna alla pagina principale\"
    </string>
    <string name="testoGuidaTitoloEliminazioneSuperSet">Eliminazione Super Set</string>
    <string name="testoGuidaEliminazioneSuperSet">Per eliminare una Super Set fare un \"click prolungato\" su uno degli esercizi che la compongono</string>
    <string name="testoGuidaAttenzioneEliminazioneSuperSet">L\' eliminazione di una Super Set comporta solo l\'eliminazione del raggruppamento. I singoli esercizi
        resteranno nel sistema
    </string>
    <string name="testoGuidaAttenzione2EliminazioneSuperSet">Una Super Set verrà automaticamente eliminata se si esegue una delle seguenti azioni:\n- Eliminazione dal
        sistema di un esercizio che ne fa parte\n - Modifica dell\'ordine di un esercizio che ne fa parte
    </string>
    <string name="testoGuidaIntroduttivaInserimentoModificaCancellazioneEsercizioPersonale">Dalla pagina è possibile eseguire le seguenti azioni:\n
        - Inserimento | Modifica | Cancellazione di esercizi nel e dall\' archivio personale\n
        - Filtrare esercizi per gruppo muscolare\n
    </string>
    <string name="testoGuidaInserimentoEsercizioPersonale">Per inserire un nuovo esercizio avvalersi del bottone con il simbolo \"+\" posto in basso a destra.
        Il sistema presenta una maschera in cui è possibile selezionare il gruppo muscolare di cui l\' esercizio fa parte e inserire il nome o la descrizione
        dell\' esercizio
    </string>
    <string name="testoGuidaModificaEsercizioPersonale">Per modificare il nome di un esercizio inserito fare un click sulla relativa voce dell\' elenco
    </string>
    <string name="testoGuidaAttenzioneEsercizioPersonaleNonModificabile">Se l\' esercizio è stato selezionato all\' interno di una o più schede non sarà
        possibile modificarlo
    </string>
    <string name="testoGuidaCancellazioneEsercizioPersonale">Per eliminare un esercizio fare un \"click prolungato\" sulla relativa voce dell\'elenco</string>
    <string name="testoGuidaAttenzioneEsercizioPersonaleNonCancellabile">Se l\' esercizio è stato selezionato all\' interno di una o più schede non sarà
        possibile eliminarlo
    </string>
    <string name="testoGuidaTitoloFiltroEserciziPersonali">Filtro per gruppo muscolare</string>
    <string name="testoGuidaFiltroEserciziPersonali">Per visualizzare gli esercizi inseriti di un determinato gruppo muscolare utilizzare il menu contrassegnato dai 3
        punti verticali posto in alto a destra e selezionare una delle relative voci.
    </string>
    <string name="testoGuidaTitoloCopiaScheda">Copia scheda</string>
    <string name="testoGuidaCopiaScheda">Il sistema permette di creare la copia di una scheda inserita.\n
        E\' possibile copiare una scheda mantenendo i pesi oppure settarli a zero nella scheda copiata.\n
        Per copiare una scheda seguire i seguenti passi:\n
        1 - Selezionare una scheda dall\' elenco delle schede e visualizzarla\n
        2 - Dal menu contrassegnato dai 3 punti verticali posto in alto a destra selezionare la voce "Copia scheda"\n
        3 - Selezionare una modalità di copia\n
        La scheda copiata sarà visualizzata come scheda corrente.
    </string>
    <string name="testoVersione">Versione app. 1.14.1.2</string>
</resources>