<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/testoGuidaTitoloGenerale"
                android:id="@+id/testoGuidaTitoloGenerale"
                android:textColor="@color/Nero"
                android:textSize="@dimen/caratteri_listView_Gruppo"
                android:textStyle="bold"
                android:gravity="center_horizontal" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/testoGuidaIntroduttivaInserimentoModificaCancellazioneEsercizioPersonale"
                android:id="@+id/testoGuidaIntroduttivaInserimentoModificaCancellazioneEsercizioPersonale"
                android:textColor="@color/Nero"
                android:textSize="@dimen/caratteri_dialog"
                android:paddingTop="10sp"
                android:gravity="left|start" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/testoGuidaTitoloInserimentoEsercizio"
                android:id="@+id/testoGuidaTitoloInserimentoEsercizio"
                android:textColor="@color/Nero"
                android:textSize="@dimen/caratteri_listView_Esercizio"
                android:paddingTop="10sp"
                android:textStyle="bold"
                android:gravity="center_horizontal" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/testoGuidaInserimentoEsercizioPersonale"
                android:id="@+id/testoGuidaInserimentoEsercizioPersonale"
                android:textColor="@color/Nero"
                android:textSize="@dimen/caratteri_dialog"
                android:gravity="left|start" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/testoAttenzioneAggiornamentoListEsercizi"
                android:id="@+id/testoAttenzioneAggiornamentoListEsercizi"
                android:textColor="@color/Rosso"
                android:textSize="@dimen/caratteri_dialog"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/testoGuidaTitoloModificaEsercizio"
                android:id="@+id/testoGuidaTitoloModificaEsercizio"
                android:textColor="@color/Nero"
                android:textSize="@dimen/caratteri_listView_Esercizio"
                android:paddingTop="10sp"
                android:textStyle="bold"
                android:gravity="center_horizontal" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/testoGuidaModificaEsercizioPersonale"
                android:id="@+id/testoGuidaModificaEsercizioPersonale"
                android:textColor="@color/Nero"
                android:textSize="@dimen/caratteri_dialog"
                android:gravity="left|start" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/testoGuidaAttenzioneEsercizioPersonaleNonModificabile"
                android:id="@+id/testoGuidaAttenzioneEsercizioPersonaleNonModificabile"
                android:textColor="@color/Rosso"
                android:textSize="@dimen/caratteri_dialog"
                android:paddingTop="10sp"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/testoGuidaTitoloCancellazioneEsercizio"
                android:id="@+id/testoGuidaTitoloCancellazioneEsercizio"
                android:textColor="@color/Nero"
                android:textSize="@dimen/caratteri_listView_Esercizio"
                android:paddingTop="10sp"
                android:textStyle="bold"
                android:gravity="center_horizontal" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/testoGuidaCancellazioneEsercizioPersonale"
                android:id="@+id/testoGuidaCancellazioneEsercizioPersonale"
                android:textColor="@color/Nero"
                android:textSize="@dimen/caratteri_dialog"
                android:gravity="left|start" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/testoGuidaAttenzioneEsercizioPersonaleNonCancellabile"
                android:id="@+id/testoGuidaAttenzioneEsercizioPersonaleNonCancellabile"
                android:textColor="@color/Rosso"
                android:textSize="@dimen/caratteri_dialog"
                android:paddingTop="10sp"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/testoGuidaTitoloFiltroEserciziPersonali"
                android:id="@+id/testoGuidaTitoloFiltroEserciziPersonali"
                android:textColor="@color/Nero"
                android:textSize="@dimen/caratteri_listView_Esercizio"
                android:paddingTop="10sp"
                android:textStyle="bold"
                android:gravity="center_horizontal" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/testoGuidaFiltroEserciziPersonali"
                android:id="@+id/testoGuidaFiltroEserciziPersonali"
                android:textColor="@color/Nero"
                android:textSize="@dimen/caratteri_dialog"
                android:gravity="left|start" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/testoVersione"
                android:id="@+id/testoGuidaVersione"
                android:textColor="@color/Nero"
                android:textSize="@dimen/caratteri_dialog"
                android:paddingTop="10sp"
                android:textStyle="bold"
                android:gravity="right|end" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>